syntax = "proto3";

option go_package = "github.com/karthick-workspace/grpc-workshop/api";

service Random{
  rpc GetDate (RequestDateTime) returns (DateTime);
  rpc GetRandom (RandomParams) returns (RandomInt);
  rpc GetRandomPass (RequestPass) returns (RandomPass);
}

message RandomParams {
  int64 Seed = 1;
  int64 Place = 2;
}

message RandomInt {
  int64 Value = 1;
}

message DateTime {
  string Value = 1;
}

message RequestDateTime {
  string value = 2;
}

message RequestPass {
  int64 Seed = 1;
  int64 Length = 8;
}

message RandomPass {
  string Password = 1;
}